--- a/index.html
+++ b/index.html
@@ -11,109 +11,144 @@
     .bordered {
         border: solid;
     }
-    .bg-color{
+
+    .bg-color {
         background-color: skyblue;
+    }
+    h3{
+        padding: .5rem;
     }
 </style>
 
 <body>
     <div class="container">
-    <div class="row">
-        <div class="col-1 bordered">
-            <div class="bg-color">1</div>
+        <h3 class="text-start">justify content start</h3>
+        <div class="row justify-content-start">
+            <div class="col-1 bordered">
+                <div class="bg-color">1</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">2</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">3</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">4</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">5</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">6</div>
+            </div>
         </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">2</div>
+        <h3 class="text-center">justify-content-center</h3>
+        <div class="row justify-content-center">
+            <div class="col-1 bordered">
+                <div class="bg-color">1</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">2</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">3</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">4</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">5</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">6</div>
+            </div>
         </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">3</div>
+        <h3 class="text-end">justify-content-end</h3>
+        <div class="row justify-content-end">
+            <div class="col-1 bordered">
+                <div class="bg-color">1</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">2</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">3</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">4</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">5</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">6</div>
+            </div>
         </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">4</div>
+        <h3>justify content around</h3>
+        <div class="row justify-content-around">
+            <div class="col-1 bordered">
+                <div class="bg-color">1</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">2</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">3</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">4</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">5</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">6</div>
+            </div>
         </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">5</div>
+        <h3>justify-content-between</h3>
+        <div class="row justify-content-between">
+            <div class="col-1 bordered">
+                <div class="bg-color">1</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">2</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">3</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">4</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">5</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">6</div>
+            </div>
         </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">6</div>
-        </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">7</div>
-        </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">8</div>
-        </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">9</div>
-        </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">10</div>
-        </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">11</div>
-        </div>
-        <div class="col-1 bordered">
-            <div class="bg-color">12</div>
+        <h3>justify-content-evenly</h3>
+        <div class="row justify-content-evenly">
+            <div class="col-1 bordered">
+                <div class="bg-color">1</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">2</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">3</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">4</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">5</div>
+            </div>
+            <div class="col-1 bordered">
+                <div class="bg-color">6</div>
+            </div>
         </div>
     </div>
-    <div class="row mt-3">
-        <div class="col-2 bordered">
-            <div class="bg-color">1</div>
-        </div>
-        <div class="col-2 bordered">
-            <div class="bg-color">2</div>
-        </div>
-        <div class="col-2 bordered">
-            <div class="bg-color">3</div>
-        </div>
-        <div class="col-2 bordered">
-            <div class="bg-color">4</div>
-        </div>
-        <div class="col-2 bordered">
-            <div class="bg-color">5</div>
-        </div>
-        <div class="col-2 bordered">
-            <div class="bg-color">6</div>
-        </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col-3 bordered">
-            <div class="bg-color">1</div>
-        </div>
-        <div class="col-3 bordered">
-            <div class="bg-color">2</div>
-        </div>
-        <div class="col-3 bordered">
-            <div class="bg-color">3</div>
-        </div>
-        <div class="col-3 bordered">
-            <div class="bg-color">4</div>
-        </div>
-    </div>
-    <div class="row mt-3">
-        <div class="col-4 bordered">
-            <div class="bg-color">1</div>
-        </div>
-        <div class="col-4 bordered">
-            <div class="bg-color">2</div>
-        </div>
-        <div class="col-4 bordered">
-            <div class="bg-color">3</div>
-        </div>
-    </div>
-    <h1 class="text-center">bagian 2</h1>
-    <div class="row mt-3">
-        <div class="col-lg-12 col-md-6 col-sm-4 bordered ">
-            <div class="bg-color">1</div>
-        </div>
-        <div class="col-lg-12 col-md-6 col-sm-4 bordered">
-            <div class="bg-color">2</div>
-        </div>
-        <div class="col-lg-12 col-md-6 col-sm-4 bordered">
-            <div class="bg-color">3</div>
-        </div>
-    </div>
-</div>
     <script src="/js/bootstrap.bundle.min.js"></script>
 
 </body>
