--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <body>
     <div class="container">
         <h3 class="text-start">justify content start</h3>
-        <div class="row justify-content-start">
-            <div class="col-1 bordered">
+        <div class="row justify-content-start gx-0 text-center">
+            <div class="col-1 bordered ">
                 <div class="bg-color">1</div>
             </div>
             <div class="col-1 bordered">
@@ -44,7 +44,7 @@
             </div>
         </div>
         <h3 class="text-center">justify-content-center</h3>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center gx-0 text-center">
             <div class="col-1 bordered">
                 <div class="bg-color">1</div>
             </div>
@@ -65,7 +65,7 @@
             </div>
         </div>
         <h3 class="text-end">justify-content-end</h3>
-        <div class="row justify-content-end">
+        <div class="row justify-content-end gx-0 text-center">
             <div class="col-1 bordered">
                 <div class="bg-color">1</div>
             </div>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <h3>justify content around</h3>
-        <div class="row justify-content-around">
+        <div class="row justify-content-around gx-0 text-center">
             <div class="col-1 bordered">
                 <div class="bg-color">1</div>
             </div>
@@ -107,7 +107,7 @@
             </div>
         </div>
         <h3>justify-content-between</h3>
-        <div class="row justify-content-between">
+        <div class="row justify-content-between gx-0 text-center">
             <div class="col-1 bordered">
                 <div class="bg-color">1</div>
             </div>
@@ -128,7 +128,7 @@
             </div>
         </div>
         <h3>justify-content-evenly</h3>
-        <div class="row justify-content-evenly">
+        <div class="row justify-content-evenly gx-0 text-centeruup">
             <div class="col-1 bordered">
                 <div class="bg-color">1</div>
             </div>
