--- a/index.html
+++ b/index.html
@@ -15,139 +15,38 @@
     .bg-color {
         background-color: skyblue;
     }
-    h3{
-        padding: .5rem;
-    }
 </style>
 
 <body>
     <div class="container">
-        <h3 class="text-start">justify content start</h3>
-        <div class="row justify-content-start gx-0 text-center">
-            <div class="col-1 bordered ">
-                <div class="bg-color">1</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">2</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">3</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">4</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">5</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">6</div>
-            </div>
-        </div>
-        <h3 class="text-center">justify-content-center</h3>
-        <div class="row justify-content-center gx-0 text-center">
-            <div class="col-1 bordered">
-                <div class="bg-color">1</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">2</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">3</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">4</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">5</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">6</div>
-            </div>
-        </div>
-        <h3 class="text-end">justify-content-end</h3>
-        <div class="row justify-content-end gx-0 text-center">
-            <div class="col-1 bordered">
-                <div class="bg-color">1</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">2</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">3</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">4</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">5</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">6</div>
-            </div>
-        </div>
-        <h3>justify content around</h3>
-        <div class="row justify-content-around gx-0 text-center">
-            <div class="col-1 bordered">
-                <div class="bg-color">1</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">2</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">3</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">4</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">5</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">6</div>
-            </div>
-        </div>
-        <h3>justify-content-between</h3>
-        <div class="row justify-content-between gx-0 text-center">
-            <div class="col-1 bordered">
-                <div class="bg-color">1</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">2</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">3</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">4</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">5</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">6</div>
-            </div>
-        </div>
-        <h3>justify-content-evenly</h3>
-        <div class="row justify-content-evenly gx-0 text-centeruup">
-            <div class="col-1 bordered">
-                <div class="bg-color">1</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">2</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">3</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">4</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">5</div>
-            </div>
-            <div class="col-1 bordered">
-                <div class="bg-color">6</div>
-            </div>
-        </div>
+        <h1>title 1</h1>
+        <h2>title 2</h2>
+        <h3>title 3</h3>
+        <h4>title 4</h4>
+        <h5>title 5</h5>
+        <h6>title 6</h6>
+        <p class="text-start">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et quia fugit doloremque
+            corporis dolorem provident
+            quidem laudantium iusto voluptas facilis labore nostrum minima deleniti enim eos rem aperiam quibusdam
+            commodi dolorum, non quasi veritatis exercitationem sequi odio? </p>
+        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione dolorum itaque veniam
+            fugiat quia debitis
+            excepturi, consectetur laborum accusantium, eos error illum expedita aliquid nisi beatae officiis recusandae
+            quibusdam. Consectetur.</p>
+        <p class="text-end">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio consequatur voluptatum
+            obcaecati laudantium
+            deserunt ut iure delectus cupiditate quidem officia! Harum placeat repudiandae veritatis cumque ad quaerat,
+            eligendi reprehenderit repellat?</p>
+            <!-- justify -->
+        <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia pariatur aperiamcommodi cumque laboreillo omnis sit fugiat iusto, consequatur itaque nemo nisi suscipit non odit repellat voluptas impedit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo placeat, aperiam accusamus laboriosam sunt veritatis odio architecto necessitatibus exercitationem ratione.
+            molestias?</p>
+            <!-- untuk kapital -->
+        <p class="text-uppercase">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa excepturi doloremque
+            similique laboriosam quis tempora consequuntur at error voluptatem inventore, nihil iure, sed libero laborum
+            sit incidunt consequatur aperiam natus commodi perferendis maiores beatae! Nobis quidem incidunt molestias
+            dolor doloremque!</p>
+            <!-- membalikan text kapital -->
+            <p class="text-lowercase">LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT. </p>
     </div>
     <script src="/js/bootstrap.bundle.min.js"></script>
 
