--- a/home.html
+++ b/home.html
@@ -53,13 +53,6 @@
     </nav>
     <!-- === END NAVBAR === -->
     <div class="container">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident nihil distinctio, sunt maiores eos in
-        recusandae explicabo cupiditate commodi iusto adipisci ipsa corporis id dolorum. Unde, similique optio vitae
-        provident, labore accusantium dolores, quis aliquam deserunt libero vel dolore! Tempora veritatis praesentium
-        provident eius, magni fugit possimus libero blanditiis quidem vel illum numquam sit doloremque est suscipit
-        ipsum hic, doloribus autem deleniti optio et nesciunt? Atque esse fugiat obcaecati earum unde impedit sint
-        molestiae similique non doloribus illo expedita deleniti, accusantium facere ab dicta, consequatur illum
-        excepturi rem ipsam laboriosam! Assumenda quisquam harum hic enim numquam qui dignissimos nesciunt asperiores.
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit odit quia perspiciatis delectus qui, deleniti
             dolorum quis quod aliquam autem corporis aperiam, rem illum eos quae hic? Adipisci nam explicabo dolorem
             veniam minus, placeat voluptates vel dolores consectetur nihil, deleniti labore corrupti cum quam architecto
@@ -68,44 +61,36 @@
             aspernatur delectus neque assumenda non! Voluptates harum perferendis perspiciatis molestiae iure sunt,
             recusandae est quaerat voluptatum at similique enim quidem nisi magnam nam necessitatibus quas voluptate
             modi nihil id?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia doloremque facilis hic a ipsam, aliquid
-            eaque alias soluta reiciendis sed harum consequatur error nemo praesentium, dignissimos ut magni explicabo
-            aperiam sapiente veritatis quisquam rem? Saepe dolore ipsa quae adipisci repellat tempora. Numquam
-            laudantium dolorum minima dolorem et doloribus magni quaerat laborum tempore est deserunt veniam,
-            repellendus voluptatem perspiciatis deleniti eos maiores sit! Illum sapiente assumenda error dolores
-            accusantium amet rerum hic fugit obcaecati pariatur culpa, nemo inventore commodi. Magni, tenetur. Rerum
-            quia, fuga culpa itaque ea ratione dolore eius ullam, quod tempora velit blanditiis incidunt architecto
-            dolor deserunt, unde inventore.</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae rerum excepturi, odit optio dolores
-            consectetur distinctio possimus error nulla dicta mollitia impedit? Doloremque pariatur eius at dicta odio
-            molestiae culpa aspernatur laborum eligendi? Quas explicabo voluptates a nemo id. Amet excepturi maxime
-            molestiae debitis nam eligendi enim facere modi, tempore quis. Necessitatibus, officia soluta a sit eveniet
-            quae voluptatum ullam distinctio? Id hic, numquam nobis eos harum facilis dicta, voluptatum aperiam placeat
-            itaque ad maxime atque sapiente ipsa sed ratione similique voluptate voluptates exercitationem officiis
-            porro illo reprehenderit labore. Earum inventore laborum dolores deleniti, commodi recusandae incidunt
-            pariatur similique, quam ut soluta expedita. Aliquid dolores, ipsa natus fugit dicta veritatis delectus eius
-            ad. Sit fuga sapiente ea aspernatur rerum voluptas voluptatum, quae eum perferendis harum autem obcaecati
-            aut dignissimos rem accusamus, dolore assumenda quod quaerat, deleniti cum atque distinctio. Non at libero
-            alias ullam. At placeat nihil aut animi laboriosam, minima soluta minus autem exercitationem qui fugit
-            suscipit rerum culpa doloribus labore, esse officiis quo. Dolore neque consectetur velit dolores
-            consequatur, quaerat quos. Reprehenderit inventore perspiciatis suscipit quisquam, expedita sapiente illum
-            in enim exercitationem animi cum ipsa, mollitia sint, corporis nemo facilis aspernatur dignissimos minus
-            voluptate saepe eaque maiores nisi!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate perspiciatis rerum ad provident id soluta
-            itaque magnam non debitis, nam eum reiciendis quas voluptatibus, expedita cum, optio ea. Sequi voluptates
-            repudiandae error, dignissimos facilis quibusdam. Tenetur distinctio quos natus necessitatibus architecto
-            eum perspiciatis non culpa facilis enim illum, doloremque modi! Architecto sint culpa alias explicabo
-            voluptate, cupiditate rem ducimus veniam similique quas odio voluptas iusto animi, voluptatem a. Unde sunt
-            quos voluptatum sint tenetur. Inventore rem dolor aut vero esse optio sunt. Quaerat, voluptates! Nobis
-            impedit corporis provident omnis excepturi. Dicta laborum aliquam pariatur voluptas quod, iste facilis error
-            quidem sit delectus impedit dignissimos nisi consequuntur molestiae iusto totam excepturi. Tempora fugiat
-            nesciunt possimus voluptatem laudantium necessitatibus eum tenetur. Dolor, molestias, quis cupiditate sequi
-            voluptates facilis exercitationem suscipit debitis distinctio delectus similique dolorum a tempora nemo sed.
-            Ex iusto officia veritatis? In, magni delectus dicta provident necessitatibus harum quaerat, asperiores eum,
-            dolor laudantium architecto pariatur error similique. Doloribus ut alias beatae velit numquam maxime
-            excepturi veniam, in recusandae illum facilis at dolore rerum magni, a quibusdam harum sunt sequi placeat
-            perspiciatis neque? Consequuntur dolorum voluptatibus, dolores reprehenderit, tenetur non, velit repellat
-            corrupti quisquam aspernatur consequatur voluptate rerum cumque culpa illo!</p>
+
+        <button class="btn bg-primary">
+            button 1
+        </button>
+        <button class="btn btn-outline-primary">
+            button 2
+        </button>
+        <button class="btn btn-sm btn-outline-success">
+            button 3
+        </button>
+        <button class="btn btn-primary">Primary</button>
+        <button class="btn btn-success">Success</button>
+        <button class="btn btn-link">Link</button>
+        <a href="https://google.com" target="_blank" class="btn btn-info">Google</a>
+
+        <div class="container d-flex justify-content-end">
+            <botton class="btn btn-warning">test</botton>
+        </div>
+ 
+        <div class="container d-flex  justify-content-center  ">
+            <div class="row">
+                <div class="col-6">
+                    <button class="btn btn-primary">1</button>
+                </div>
+                <div class="col-6">
+                    <button class="btn btn-warning">2</button>
+                </div>
+            </div>
+        </div>
+
     </div>
     <script src="js/bootstrap.bundle.js"></script>
 </body>
