--- a/image.html
+++ b/image.html
@@ -9,14 +9,15 @@
 </head>
 
 <style>
-    .banner{
+    .banner {
         height: 100vh;
-        background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(images/Kanto\ Route\ 1.jpeg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/Kanto\ Route\ 1.jpeg);
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
     }
-    .banner-content{
+
+    .banner-content {
         justify-content: center;
         align-items: center;
         height: 100%;
@@ -25,6 +26,7 @@
         text-align: center;
     }
 </style>
+
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-info sticky-top">
@@ -64,53 +66,7 @@
         </div>
     </div>
 
-    <!-- CARAOUSEL -->
-    <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="images/Pokemon Logo and symbol, meaning, history, PNG, brand.jpg" class="d-block w-100"
-                    alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="images/草地-, labuu.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="images/Kanto Route 1.jpeg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                </div>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-
-    <!-- container 1 -->
+    <!-- CHARACTER -->
     <div class="container">
         <h1 class="text-center">character</h1>
         <p class="text-center d-sm-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -224,7 +180,53 @@
         </div>
     </div>
 
-    <!-- container 2 -->
+    <!-- CARAOUSEL -->
+    <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/Pokemon Logo and symbol, meaning, history, PNG, brand.jpg" class="d-block w-100"
+                    alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/草地-, labuu.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/Kanto Route 1.jpeg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <!-- Details-->
     <div class="container">
         <h2 class="text-center">Details</h2>
         <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni deserunt ea sapiente
@@ -240,6 +242,14 @@
                 <img src="images/Pokemon Logo and symbol, meaning, history, PNG, brand.jpg" alt=""
                     class="w-100 rounded-3 shadow-lg">
             </div>
+        </div>
+    </div>
+
+    <div class="container card p-5">
+        <div class="row">
+            <div class="col-md-4 order-2">kolom order 1</div>
+            <div class="col-md-4 order-3">kolom order 2</div>
+            <div class="col-md-4 order-1">kolom order 3</div>
         </div>
     </div>
     <script src="js/bootstrap.bundle.js"></script>
