--- a/image.html
+++ b/image.html
@@ -66,6 +66,81 @@
         </div>
     </div>
 
+    <!-- ACCORDION -->
+    <div class="row justify-content-center">
+        <div class="col-lg-8  mt-5">
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Accordion Item #1
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes
+                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                            can
+                            modify any of this with custom CSS or overriding our default variables. It's also worth
+                            noting
+                            that just about any HTML can go within the <code>.accordion-body</code>, though the
+                            transition
+                            does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
+                            the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes
+                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                            can
+                            modify any of this with custom CSS or overriding our default variables. It's also worth
+                            noting
+                            that just about any HTML can go within the <code>.accordion-body</code>, though the
+                            transition
+                            does limit overflow.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Accordion Item #3
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
+                            collapse plugin adds the appropriate classes that we use to style each element. These
+                            classes
+                            control the overall appearance, as well as the showing and hiding via CSS transitions. You
+                            can
+                            modify any of this with custom CSS or overriding our default variables. It's also worth
+                            noting
+                            that just about any HTML can go within the <code>.accordion-body</code>, though the
+                            transition
+                            does limit overflow.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- CHARACTER -->
     <div class="container">
         <h1 class="text-center">character</h1>
@@ -233,25 +308,20 @@
             explicabo voluptas. Magni
             at vero ipsam quod obcaecati.</p>
         <div class="row align-items-center bg-info p-4 rounded-3 shadow-lg">
-            <div class="col-md-6">
+            <div class="col-md-6 order-lg-1 order-md-1 order-sm-2">
                 <h4 class="text-center">Detail Character</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus beatae similique facere?
                     Perferendis ipsam expedita cum dicta ullam praesentium sed.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-sm-1">
                 <img src="images/Pokemon Logo and symbol, meaning, history, PNG, brand.jpg" alt=""
                     class="w-100 rounded-3 shadow-lg">
             </div>
         </div>
     </div>
 
-    <div class="container card p-5">
-        <div class="row">
-            <div class="col-md-4 order-2">kolom order 1</div>
-            <div class="col-md-4 order-3">kolom order 2</div>
-            <div class="col-md-4 order-1">kolom order 3</div>
-        </div>
-    </div>
+
+
     <script src="js/bootstrap.bundle.js"></script>
 </body>
 
