--- a/image.html
+++ b/image.html
@@ -331,8 +331,9 @@
     </div>
 
     <!-- TABLES -->
-    <div class="container card table-responsive table-bordered">
-        <div class="mt-5">
+    <div class="container card table-responsive table-bordered mt-3">
+        <div class="mt-2">
+            <h1 class="text-center">Table</h1>
             <table class="table table-striped table-hover border">
                 <thead>
                     <tr>
